# LA_CPlusPlus

./: CMakeLists.txt  LICENSE  LevenshteinDFA.cpp  LevenshteinNFA.cpp  README.md  Trie.cpp  Trie.h  entry.cpp  entry.h  wordsToTest.txt
include/levenshtein_automaton/: LevenshteinDFA.h  LevenshteinNFA.h  Trie.h  trie_node.h  trie_tree.h
src/levenshtein_automaton/: LevenshteinDFA.cpp  LevenshteinNFA.cpp  Trie.cpp  trie_node.cpp  trie_tree.cpp
tests/: entry.cpp  test.cpp
